<resources>
    <string name="app_name">Smart Finance</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_input_job">InputJobActivity</string>
    <string name="name">Name</string>
    <string name="salary">Salary</string>
    <string name="yen">¥</string>
    <string name="frequency">Frequency</string>
    <string name="title_activity_input_debt">InputDebtActivity</string>
    <string name="title_activity_input_asset">InputAssetActivity</string>
    <string name="month">month</string>
    <string name="balance">Balance</string>
    <string name="interest">Interest</string>
    <string name="percent">%</string>
    <string name="payment">Payment</string>
    <string name="times">Times</string>
    <string name="time">回</string>
    <string name="installments">Installments</string>
    <string name="title_activity_expensive">ExpensiveActivity</string>
    <string name="mount">Mount</string>
    <string name="paymenttime">PaymentTime</string>
    <string name="purchasetime">PurchaseTime</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="i_have">I have</string>
    <string name="i_need">I need</string>
    <string name="potential">Potential</string>
</resources>
