<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_input_job"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.hiroaki.smartfinance.view.InputJobActivity"
    tools:showIn="@layout/activity_input_job">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColorHint="#808080">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:lines="1"
            android:textColor="#808080"
            android:textSize="32sp" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/center_RL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <!-- ===================== Salary ==================== -->
    <TextView
        android:id="@+id/i_have_RL"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_below="@id/name_wrapper"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:text="@string/salary"
        android:textColor="#808080"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/yen_mark1"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_alignBottom="@id/i_have_RL"
        android:layout_alignTop="@id/i_have_RL"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/center_RL"
        android:gravity="center_vertical"
        android:text="@string/yen"
        android:textColor="#808080"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/mount"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignBottom="@id/i_have_RL"
        android:layout_alignTop="@id/i_have_RL"
        android:layout_below="@id/name_wrapper"
        android:layout_toEndOf="@id/yen_mark1"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:inputType="number"
        android:lines="1"
        android:textColor="#808080"
        android:textSize="32sp" />


    <!-- ===================== Frequency ==================== -->
    <TextView
        android:id="@+id/payment_RL"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_below="@id/i_have_RL"
        android:gravity="center_vertical"
        android:text="@string/frequency"
        android:textColor="#808080"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/interest"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignBottom="@id/payment_RL"
        android:layout_alignTop="@id/payment_RL"
        android:layout_below="@id/i_have_RL"
        android:layout_toEndOf="@id/center_RL"
        android:layout_toStartOf="@+id/month_RL"
        android:gravity="center_vertical|end"
        android:includeFontPadding="false"
        android:inputType="number"
        android:lines="1"
        android:textColor="#808080"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/month_RL"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_alignBottom="@+id/payment_RL"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/payment_RL"
        android:gravity="center_vertical"
        android:text="@string/month"
        android:textColor="#808080"
        android:textSize="26sp" />


</RelativeLayout>
